--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                   proportion.
                 </p>
                 <div class="btn-bar">
-                  <a class="px-btn px-btn-white" href="#">Contact Me</a>
+                  <a class="px-btn px-btn-white" href="#">Hire Me</a>
                 </div>
               </div>
             </div>
