--- a/index.html
+++ b/index.html
@@ -824,78 +824,39 @@
                 <div class="sm-title">
                   <h3>Get In Touch</h3>
                 </div>
-                <form id="contact-form" method="POST">
+                <form id="contact-form" action="https://formsubmit.co/subhankhalidofficial@gmail.com" method="POST">
+                  <input type="hidden" name="_captcha" value="false">
+                  <input type="hidden" name="_next" value="https://iabdulsubhan.github.io/abdulsubhanportfolio/">
                   <div class="row">
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input
-                          name="Name"
-                          id="name"
-                          placeholder="Name *"
-                          class="form-control"
-                          type="text"
-                        />
+                        <input name="Name" id="name" placeholder="Name *" class="form-control" type="text" required />
                       </div>
                     </div>
                     <div class="col-md-6">
                       <div class="form-group">
-                        <input
-                          name="Email"
-                          id="email"
-                          placeholder="Email *"
-                          class="form-control"
-                          type="email"
-                        />
+                        <input name="Email" id="email" placeholder="Email *" class="form-control" type="email" required />
                       </div>
                     </div>
                     <div class="col-12">
                       <div class="form-group">
-                        <input
-                          name="Subject"
-                          id="subject"
-                          placeholder="Subject *"
-                          class="form-control"
-                          type="text"
-                        />
+                        <input name="Subject" id="subject" placeholder="Subject *" class="form-control" type="text" required />
                       </div>
                     </div>
                     <div class="col-md-12">
                       <div class="form-group">
-                        <textarea
-                          name="message"
-                          id="message"
-                          placeholder="Your message *"
-                          rows="3"
-                          class="form-control"
-                        ></textarea>
+                        <textarea name="message" id="message" placeholder="Your message *" rows="3" class="form-control" required></textarea>
                       </div>
                     </div>
                     <div class="col-md-12">
                       <div class="send">
-                        <button
-                          class="px-btn px-btn-white"
-                          onclick="send_mail()"
-                          type="button"
-                          value="Send"
-                        >
+                        <button class="px-btn px-btn-white" type="submit">
                           <span>Contact Us</span>
                         </button>
                       </div>
-                      <span
-                        id="suce_message"
-                        class="text-success"
-                        style="display: none"
-                        >Message Sent Successfully</span
-                      >
-                      <span
-                        id="err_message"
-                        class="text-danger"
-                        style="display: none"
-                        >Message Sending Failed</span
-                      >
                     </div>
                   </div>
-                </form>
+                </form>                
               </div>
             </div>
             </div>
