--- a/index.html
+++ b/index.html
@@ -17,6 +17,19 @@
     <link rel="shortcut icon" type="image/x-icon" href="favicon.ico" />
     <!-- theme css -->
     <link href="static/css/dark/style.css" rel="stylesheet" />
+    
+    <!-- emailjs -->
+    <script type="text/javascript"
+        src="https://cdn.jsdelivr.net/npm/@emailjs/browser@4/dist/email.min.js">
+    </script>
+    <script type="text/javascript">
+      (function(){
+          emailjs.init({
+            publicKey: "gSPw5o9gKaEJ7lzKX",
+          });
+      })();
+    </script>
+    <script src="script.js"></script>
   </head>
   <!-- Body Start -->
 
@@ -850,8 +863,8 @@
                     </div>
                     <div class="col-md-12">
                       <div class="send">
-                        <button class="px-btn px-btn-white" type="submit">
-                          <span>Contact Us</span>
+                        <button class="px-btn px-btn-white" type="submit" onclick="sendMail()">
+                          <span>Send</span>
                         </button>
                       </div>
                     </div>
