--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                   </div>
                   <div class="nav">
                     <a href="https://github.com/IAbdulSubhan/DjangoComplete/blob/main/recipeapp/recipe-demo.gif" target="_blank">
-                      <span>Live Demo</span>
+                      <span>Demo</span>
                     </a>
                   </div>
                 </div>
