--- a/index.html
+++ b/index.html
@@ -544,7 +544,7 @@
                   </div>
                   <div class="nav">
                     <a href="https://github.com/IAbdulSubhan/DjangoComplete/blob/main/recipeapp/recipe-demo.gif" target="_blank">
-                      <span>Live Demo</span>
+                      <span>Demo</span>
                     </a>
                   </div>
                 </div>
@@ -557,18 +557,25 @@
                 <div class="portfolio-img col-sm-6 col-lg-7">
                   <a
                     class="p-icon gallery-link"
-                    href="static/img/portfolio-03.jpg"
+                    href="static/img/football-top-scorrer-scrappig.png"
                   >
                     <i class="bi bi-plus"></i>
                   </a>
-                  <img src="static/img/portfolio-03.jpg" title="" alt="" />
+                  <img src="static/img/football-top-scorrer-scrappig.png" title="" alt="" />
                 </div>
                 <div class="portfolio-info col-sm-6 col-lg-5">
-                  <h2>Mombo Mockup</h2>
-                  <p>Lorem ipsum dolor sit amet.</p>
+                  <h2>⚽ Football Stats Scraper</h2>
+                  <p>Scraper football player stats using BeautifulSoup.</p>
                   <div class="d-flex" id="">
-                    <div class="nav"><span>Ui Design</span></div>
-                    <div class="nav"><span>Ui Design</span></div>
+                    <div class="nav"><a href="https://github.com/IAbdulSubhan/WebScrapping/tree/main/Football%20Stats%20Scraper" target="_blank">
+                      <span>View Code</span>
+                    </a>
+                    </div>
+                    <div class="nav">
+		            <a href="https://github.com/IAbdulSubhan/WebScrapping/blob/main/Football%20Stats%20Scraper/EPL%20Top%20Scorers.xlsx" target="_blank">
+		              <span>Demo</span>
+		            </a>
+                    </div>
                   </div>
                 </div>
               </div>
