--- a/index.html
+++ b/index.html
@@ -585,18 +585,26 @@
                 <div class="portfolio-img col-sm-6 col-lg-7">
                   <a
                     class="p-icon gallery-link"
-                    href="static/img/portfolio-01.jpg"
+                    href="static/img/automate_bill_download.png"
                   >
                     <i class="bi bi-plus"></i>
                   </a>
-                  <img src="static/img/portfolio-01.jpg" title="" alt="" />
+                  <img src="static/img/automate_bill_download.png" title="" alt="" />
                 </div>
                 <div class="portfolio-info col-sm-6 col-lg-5">
-                  <h2>Mombo Mockup</h2>
-                  <p>Lorem ipsum dolor sit amet.</p>
+                  <h2>Automate Bill Download</h2>
+                  <p>A Python Flask web application that automates downloading electricity bills from LESCO's official site using Selenium. It handles CAPTCHA solving (OCR), extracts billing details, and generates a PDF of the bill.</p>
                   <div class="d-flex" id="">
-                    <div class="nav"><span>Ui Design</span></div>
-                    <div class="nav"><span>Ui Design</span></div>
+                    <div class="nav"><a href="https://github.com/IAbdulSubhan/lesco-bill-download" target="_blank">
+		              <span>View Code</span>
+		            </a>
+                    
+                    </div>
+                    <div class="nav">
+                    <a href="https://github.com/IAbdulSubhan/lesco-bill-download/blob/main/output.gif" target="_blank">
+		              <span>Demo</span>
+		            </a>
+                    </div>
                   </div>
                 </div>
               </div>
