--- a/index.html
+++ b/index.html
@@ -473,7 +473,7 @@
                     <h6>Jan, 2025 – May, 2025</h6>
                   </div>
                   <div class="col-sm-8 col-xl-9 ps-xl-4">
-                    <h5>Junior Backend Developer</h5>
+                    <h5>Junior Backend Developer (ROR)</h5>
                     <p>
                       Worked as part of a backend development team focused on product stabilization, performance
                       optimization, and codebase reliability. Contributed to core infrastructure and maintenance of
