--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
               <a class="nav-link" data-scroll-nav="3" href="#work"><span>Portfolio</span></a>
             </li>
             <li>
-              <a class="nav-link" data-scroll-nav="4" href="#blog"><span>Blog</span></a>
+              <a class="nav-link" href="https://github.com/IAbdulSubhan"><span>Github</span></a>
             </li>
             <li>
               <a class="nav-link" data-scroll-nav="5" href="#contactus"><span>Contact</span></a>
@@ -86,18 +86,22 @@
     <!-- section -->
     <section id="home" data-scroll-index="0" class="home-banner">
       <div class="social-share nav d-none d-lg-flex">
+        <a href="https://github.com/IAbdulSubhan">
+          <i class="bi bi-github"></i>
+        </a>
+        <a href="https://www.linkedin.com/in/abdulsubhanmian/">
+          <i class="bi bi-linkedin"></i>
+        </a>
         <a href="#">
           <i class="bi bi-facebook"></i>
         </a>
         <a href="#">
           <i class="bi bi-twitter"></i>
         </a>
-        <a href="#">
+        <a href="https://www.instagram.com/abdulsubhanmian/">
           <i class="bi bi-instagram"></i>
         </a>
-        <a href="#">
-          <i class="bi bi-linkedin"></i>
-        </a>
+
       </div>
       <div class="placeholder">
         <h5>M<br />i<br />a<br />n</h5>
@@ -879,33 +883,37 @@
                 <div class="sm-title">
                   <h3>Email</h3>
                 </div>
-                <p>info@domainname.com<br />support@domain.com</p>
+                <p>subhankhalidofficial@gmail.com</p>
               </div>
               <div class="contact-name">
                 <div class="sm-title">
-                  <h3>Visit My Studio</h3>
+                  <h3>Based In</h3>
                 </div>
-                <p>Warnwe Park Streetperrine, <br />FL 33157 New York City</p>
+                <p>Sheikhupura <br />Lahore, Pakistan</p>
               </div>
               <div class="contact-name">
                 <div class="sm-title">
                   <h3>Phone</h3>
                 </div>
-                <p>+01 123 654 8096</p>
+                <p>+92 335 4318449</p>
               </div>
               <div class="social-share nav">
+                <a href="https://github.com/IAbdulSubhan">
+                  <i class="bi bi-github"></i>
+                </a>
+                <a href="https://www.linkedin.com/in/abdulsubhanmian/">
+                  <i class="bi bi-linkedin"></i>
+                </a>
                 <a href="#">
                   <i class="bi bi-facebook"></i>
                 </a>
                 <a href="#">
                   <i class="bi bi-twitter"></i>
                 </a>
-                <a href="#">
+                <a href="https://www.instagram.com/abdulsubhanmian/">
                   <i class="bi bi-instagram"></i>
                 </a>
-                <a href="#">
-                  <i class="bi bi-linkedin"></i>
-                </a>
+
               </div>
             </div>
           </div>
