--- a/index.html
+++ b/index.html
@@ -187,6 +187,64 @@
                   </p>
                 </div>
               </div>
+            </div>
+          </div>
+
+          <!-- Right Column - Skills -->
+          <div class="col-lg-6">
+            <div>
+              <div class="skills-section">
+                <!-- Technologies & Skills -->
+                <div class="skills-card">
+                  <div class="sm-title">
+                    <h3>Technical Skills</h3>
+                  </div>
+                  <div class="skills-grid">
+                    <div class="skill-category">
+                      <h4>Backend</h4>
+                      <div class="skill-items">
+                        <span>Django</span>
+                        <span>Django REST</span>
+                        <span>Flask</span>
+                        <span>Celery</span>
+                        <span>Redis</span>
+                      </div>
+                    </div>
+                    <div class="skill-category">
+                      <h4>Databases</h4>
+                      <div class="skill-items">
+                        <span>PostgreSQL</span>
+                        <span>SQLite</span>
+                        <span>MySQL</span>
+                      </div>
+                    </div>
+                    <div class="skill-category">
+                      <h4>DevOps</h4>
+                      <div class="skill-items">
+                        <span>Docker</span>
+                        <span>AWS</span>
+                        <span>Heroku</span>
+                        <span>Git</span>
+                        <span>CI/CD</span>
+                      </div>
+                    </div>
+                    <div class="skill-category">
+                      <h4>Other</h4>
+                      <div class="skill-items">
+                        <span>Web Scraping</span>
+                        <span>Selenium</span>
+                        <span>Automation</span>
+                        <span>Linux</span>
+                        <span>APIs</span>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+
+            </div>
+          </div>
 
               <!-- Expertise Areas -->
               <div class="expertise-section">
@@ -194,7 +252,7 @@
                   <h3>My Expertise</h3>
                 </div>
                 <div class="row expertise-items">
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                     <div class="expertise-card">
                       <div class="expertise-icon">
                         <i class="bi bi-server"></i>
@@ -203,7 +261,7 @@
                       <p>Building RESTful APIs, database design, authentication systems with Django and DRF</p>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                     <div class="expertise-card">
                       <div class="expertise-icon">
                         <i class="bi bi-laptop"></i>
@@ -212,7 +270,7 @@
                       <p>Creating bots and scripts to automate repetitive tasks and workflows</p>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                     <div class="expertise-card">
                       <div class="expertise-icon">
                         <i class="bi bi-globe"></i>
@@ -221,7 +279,7 @@
                       <p>Extracting and processing web data using BeautifulSoup, Scrapy, and Selenium</p>
                     </div>
                   </div>
-                  <div class="col-md-6">
+                  <div class="col-md-3">
                     <div class="expertise-card">
                       <div class="expertise-icon">
                         <i class="bi bi-gear"></i>
@@ -232,97 +290,6 @@
                   </div>
                 </div>
               </div>
-            </div>
-          </div>
-
-          <!-- Right Column - Skills -->
-          <div class="col-lg-6">
-            <div class="skills-section">
-              <!-- Technologies & Skills -->
-              <div class="skills-card">
-                <div class="sm-title">
-                  <h3>Technical Skills</h3>
-                </div>
-                <div class="skills-grid">
-                  <div class="skill-category">
-                    <h4>Backend</h4>
-                    <div class="skill-items">
-                      <span>Django</span>
-                      <span>Django REST</span>
-                      <span>Flask</span>
-                      <span>Celery</span>
-                      <span>Redis</span>
-                    </div>
-                  </div>
-                  <div class="skill-category">
-                    <h4>Databases</h4>
-                    <div class="skill-items">
-                      <span>PostgreSQL</span>
-                      <span>SQLite</span>
-                      <span>MySQL</span>
-                    </div>
-                  </div>
-                  <div class="skill-category">
-                    <h4>DevOps</h4>
-                    <div class="skill-items">
-                      <span>Docker</span>
-                      <span>AWS</span>
-                      <span>Heroku</span>
-                      <span>Git</span>
-                      <span>CI/CD</span>
-                    </div>
-                  </div>
-                  <div class="skill-category">
-                    <h4>Other</h4>
-                    <div class="skill-items">
-                      <span>Web Scraping</span>
-                      <span>Selenium</span>
-                      <span>Automation</span>
-                      <span>Linux</span>
-                      <span>APIs</span>
-                    </div>
-                  </div>
-                </div>
-              </div>
-
-              <!-- Work Process -->
-              <div class="work-process">
-                <div class="sm-title">
-                  <h3>Development Process</h3>
-                </div>
-                <div class="process-steps">
-                  <div class="process-step">
-                    <div class="step-number">01</div>
-                    <div class="step-content">
-                      <h4>Requirement Analysis</h4>
-                      <p>Understanding project needs and planning architecture</p>
-                    </div>
-                  </div>
-                  <div class="process-step">
-                    <div class="step-number">02</div>
-                    <div class="step-content">
-                      <h4>Database Design</h4>
-                      <p>Creating efficient data models and relationships</p>
-                    </div>
-                  </div>
-                  <div class="process-step">
-                    <div class="step-number">03</div>
-                    <div class="step-content">
-                      <h4>API Development</h4>
-                      <p>Building robust backend services and endpoints</p>
-                    </div>
-                  </div>
-                  <div class="process-step">
-                    <div class="step-number">04</div>
-                    <div class="step-content">
-                      <h4>Testing & Deployment</h4>
-                      <p>Ensuring quality and deploying to production</p>
-                    </div>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
         </div>
       </div>
     </section>
