Updated portfolio Qasaralsahlit

--- a/index.html
+++ b/index.html
@@ -206,6 +206,7 @@
                         <span>Django</span>
                         <span>Django REST</span>
                         <span>Flask</span>
+                        <span>FastAPI</span>
                         <span>Celery</span>
                         <span>Redis</span>
                       </div>
@@ -214,7 +215,7 @@
                       <h4>Databases</h4>
                       <div class="skill-items">
                         <span>PostgreSQL</span>
-                        <span>SQLite</span>
+                        <span>SQL Server</span>
                         <span>MySQL</span>
                       </div>
                     </div>
@@ -223,7 +224,6 @@
                       <div class="skill-items">
                         <span>Docker</span>
                         <span>AWS</span>
-                        <span>Heroku</span>
                         <span>Git</span>
                         <span>CI/CD</span>
                       </div>
@@ -233,6 +233,7 @@
                       <div class="skill-items">
                         <span>Web Scraping</span>
                         <span>Selenium</span>
+                        <span>Playwright</span>
                         <span>Automation</span>
                         <span>Linux</span>
                         <span>APIs</span>
@@ -441,7 +442,7 @@
                       Completed an internship focused on Ruby on Rails development, contributing to a Depot app project
                       involving backend development, MVC architecture, and RESTful APIs.
                     </p>
-                    <span>- Sheikhupura, Pakistan</span>
+                    <span>InfinitDev - Sheikhupura, Pakistan</span>
                   </div>
                 </li>
                 <li class="row g-0">
@@ -461,22 +462,62 @@
                       <a href="#" target="_blank">Sale Point</a> |
                       <a href="https://reinsapp.com/" target="_blank">Reins App</a>
                     </ul>
-                    <span>- Sheikhupura, Pakistan</span>
+                    <span>InfinitDev - Sheikhupura, Pakistan</span>
                   </div>
                 </li>
 
                 <li class="row g-0">
                   <div class="col-sm-4 col-xl-3">
-                    <h6>Sep, 2016 – May, 2017</h6>
+                    <h6>June, 2025 – August, 2025</h6>
                   </div>
                   <div class="col-sm-8 col-xl-9 ps-xl-4">
-                    <h5>Full Stack Developer</h5>
+                    <h5>Automation & WebScrapping Developer (Remote)</h5>
                     <p>
-                      Lorem ipsum dolor sit amet, consectetur adipisicing
-                      elit, sed do eiusmod tempor incididunt ut labore et
-                      dolore magna aliqua.
+                      Developed robust automation scripts and web-scraping tools in Python to streamline data extraction
+                      using Playwright and
+                      Selenium. These tools enable users to check insurance member eligibility for both individual
+                      patients and bulk patient
+                      lists, with support for background window services. The system retrieves detailed member
+                      information—including
+                      eligibility status—from insurance portals, and saves the corresponding eligibility documents as
+                      base64-encoded images
+                      and PDFs. These are integrated into <a href="http://insotics.qasralsahlit.com:8000"
+                        target="_blank">Insotics App</a>
                     </p>
-                    <span>- Las Vegas, USA</span>
+                    <span><a href="http://qasralsahlit.com">QasralsahlIT Solutions</a> - UAE</span>
+                  </div>
+                </li>
+                <li class="row g-0">
+                  <div class="col-sm-4 col-xl-3">
+                    <h6>August, 2025 – Sep, 2025</h6>
+                  </div>
+                  <div class="col-sm-8 col-xl-9 ps-xl-4">
+                    <h5>Python Developer (Remote)</h5>
+                    <p>
+                      Claim Downloader – Automated XML Claim Retrieval & Processing Pipeline <br>
+                      Built an end-to-end automated pipeline to download, decode, parse, and store healthcare claim XML
+                      files. The system
+                      retrieves transaction files (submission or remittance) for a given client and date range,
+                      processes them, and inserts
+                      structured data into the database.
+                      br
+                      Demo: <a href="eClaim-Downloader-Logs.gif" target="_blank" rel="noopener">View Demo (GIF)</a>
+                    </p>
+                    <span><a href="http://qasralsahlit.com">QasralsahlIT Solutions</a> - UAE</span>
+                  </div>
+                </li>
+                <li class="row g-0">
+                  <div class="col-sm-4 col-xl-3">
+                    <h6>June, 2025 – </h6>
+                  </div>
+                  <div class="col-sm-8 col-xl-9 ps-xl-4">
+                    <h5>Python Developer (Remote)</h5>
+                    <p>
+                      Developed and maintained SAAS based web application using FastAPI, focusing on backend logic, database
+                      integration, and API development.
+                      <a href="http://insotics.qasralsahlit.com:8000" target="_blank">Insotics App</a>
+                    </p>
+                    <span><a href="http://qasralsahlit.com">QasralsahlIT Solutions</a> - UAE</span>
                   </div>
                 </li>
                 <li class="row g-0">
