--- a/index.html
+++ b/index.html
@@ -1021,13 +1021,13 @@
                   <span>14</span>
                   <small>JAN</small>
                 </div>
-                <a href="blog.html">
+                <a href="#">
                   <img src="static/img/blog-1.jpg" title="" alt="" />
                 </a>
               </div>
               <div class="blog-info">
                 <h6>
-                  <a href="blog.html">Prevent 75% of visitors from google analytics</a>
+                  <a href="#">Prevent 75% of visitors from google analytics</a>
                 </h6>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -1035,7 +1035,7 @@
                   aliqua.
                 </p>
                 <div class="btn-bar">
-                  <a href="blog.html" class="px-btn-arrow">
+                  <a href="#" class="px-btn-arrow">
                     <span>Read More</span>
                     <i class="arrow"></i>
                   </a>
@@ -1050,13 +1050,13 @@
                   <span>14</span>
                   <small>JAN</small>
                 </div>
-                <a href="blog.html">
+                <a href="#">
                   <img src="static/img/blog-2.jpg" title="" alt="" />
                 </a>
               </div>
               <div class="blog-info">
                 <h6>
-                  <a href="blog.html">Prevent 75% of visitors from google analytics</a>
+                  <a href="#">Prevent 75% of visitors from google analytics</a>
                 </h6>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -1064,7 +1064,7 @@
                   aliqua.
                 </p>
                 <div class="btn-bar">
-                  <a href="blog.html" class="px-btn-arrow">
+                  <a href="#" class="px-btn-arrow">
                     <span>Read More</span>
                     <i class="arrow"></i>
                   </a>
@@ -1079,13 +1079,13 @@
                   <span>14</span>
                   <small>JAN</small>
                 </div>
-                <a href="blog.html">
+                <a href="#">
                   <img src="static/img/blog-3.jpg" title="" alt="" />
                 </a>
               </div>
               <div class="blog-info">
                 <h6>
-                  <a href="blog.html">Prevent 75% of visitors from google analytics</a>
+                  <a href="#">Prevent 75% of visitors from google analytics</a>
                 </h6>
                 <p>
                   Lorem ipsum dolor sit amet, consectetur adipisicing elit,
@@ -1093,7 +1093,7 @@
                   aliqua.
                 </p>
                 <div class="btn-bar">
-                  <a href="blog.html" class="px-btn-arrow">
+                  <a href="#" class="px-btn-arrow">
                     <span>Read More</span>
                     <i class="arrow"></i>
                   </a>
